--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-transform-arrow-functions": "^7.27.1",
     "@babel/plugin-transform-block-scoping": "^7.27.1",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.27.1",
+    "acorn": "8.15.0",
     "uglify-js": "^3.19.3"
   }
 }
