Add header injection toggle and media query polyfill
Introduces a preference toggle for Sec-Fetch-* header injection (iOS < 16.4) and adds a polyfill for CSS media query range syntax for iOS 16.4+. Updates Makefile to include ModHeader.x, control dependencies, and bumps version to 2.17.0.

--- a/control
+++ b/control
@@ -1,11 +1,11 @@
 Package: com.ps.polyfills
 Name: Polyfills
-Version: 2.16.0
+Version: 2.17.0
 Architecture: iphoneos-arm
 Description: Injects JavaScript Polyfills to iOS web views.
 Maintainer: PoomSmart
 Author: PoomSmart
 Section: Tweaks
-Depends: mobilesubstrate (>= 0.9.5000), firmware (>= 8.0), preferenceloader, com.ps.polyfillsregexp
+Depends: mobilesubstrate (>= 0.9.5000), firmware (>= 8.0), preferenceloader, com.ps.polyfillsregexp, com.ps.customsecheaders | firmware (>= 16.4)
 Depiction: https://poomsmart.github.io/repo/depictions/polyfills.html
 SileoDepiction: https://poomsmart.github.io/repo/sileodepictions/polyfills.json
